--- a/segundaProyectoFinal/package.json
+++ b/segundaProyectoFinal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clase19",
+  "name": "segundaproyectofinal",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^6.8.0"
+    "express": "^4.18.2",
+    "knex": "^2.3.0",
+    "mysql": "^2.18.1"
   }
 }
