--- a/segundaProyectoFinal/package.json
+++ b/segundaProyectoFinal/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "segundaproyectofinal",
   "version": "1.0.0",
   "description": "",
@@ -11,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "firebase-admin": "^11.4.0",
     "knex": "^2.3.0",
+    "mongoose": "^6.8.0",
     "mysql": "^2.18.1"
   }
 }
