--- a/desafio9Clase22/package.json
+++ b/desafio9Clase22/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
+    "create-database": "node database/createTables.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "knex": "^2.3.0",
+    "mongoose": "^6.8.3",
     "mysql": "^2.18.1",
     "socket.io": "^4.5.4",
     "sqlite3": "^5.1.4"
