--- a/desafio9Clase22/package.json
+++ b/desafio9Clase22/package.json
@@ -19,6 +19,7 @@
     "knex": "^2.3.0",
     "mongoose": "^6.8.3",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.2",
     "socket.io": "^4.5.4",
     "sqlite3": "^5.1.4"
   }
