--- a/desafio12Clase28/package.json
+++ b/desafio12Clase28/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@faker-js/faker": "^7.6.0",
         "bcrypt": "^5.1.0",
+        "child_process": "^1.0.2",
         "connect-mongo": "^4.6.0",
         "dotenv": "^16.0.3",
         "ejs": "^3.1.8",
