--- a/desafio12Clase28/.env
+++ b/desafio12Clase28/.env
@@ -3,9 +3,9 @@ mongoDb = mongoose
 mysqlDb = {
     host: "127.0.0.1",
 
-    port: 3306;
+    port: 3306,
 
-    user: "root";
+    user: "root",
 
     password: "",
 
