--- a/desafio13Clase30/.env
+++ b/desafio13Clase30/.env
@@ -1,3 +1,13 @@
 mongoDb = mongoose
 
-mysqlDb = mysqlConnection
+mysqlDb = {
+    host: "127.0.0.1",
+
+    port: 3306,
+
+    user: "root",
+
+    password: "",
+
+    database: "ecommerce"
+}
