--- a/desafio18Clase44/.env
+++ b/desafio18Clase44/.env
@@ -1,1 +1,1 @@
-MONGOBD_CONNECTION_STRING= "mongodb+srv://ecommerce:ecommerce@cluster0.e0dov1u.mongodb.net/?retryWrites=true&w=majority"
+MONGOBD_CONNECTION_STRING= "mongodb+srv://ecommerce:ecommerce@cluster0.e0dov1u.mongodb.net/ecomerce?retryWrites=true&w=majority"
