--- a/desafio18Clase44/package.json
+++ b/desafio18Clase44/package.json
@@ -20,9 +20,11 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.3",
-    "graphql": "^16.6.0",
+    "log4js": "^6.9.1",
+    "minimist": "^1.2.8",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
