--- a/trabajoFinalGomezClaudio/package.json
+++ b/trabajoFinalGomezClaudio/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "desafio15clase38",
+  "name": "trabajoFinalGomezClaudio",
   "type": "module",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
     "test": "mocha ./test/producto.test.js",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -26,7 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.6.1"
   },
   "directories": {
     "test": "test"
