--- a/trabajoFinalGomezClaudio/package.json
+++ b/trabajoFinalGomezClaudio/package.json
@@ -24,6 +24,7 @@
     "minimist": "^1.2.8",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
